rendered/envs/alpha/cams/middleware-cams-cam-rewrite.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: cams-cam-rewrite
spec:
  replacePathRegex:
    regex: ^/cam[0-9]+
    replacement: /cam/
