rendered/envs/alpha/cams/deployment-cams.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: cams
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: cams
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cams
    spec:
      containers:
        - image: oci.zebradil.dev/zebradil/homelab/maks-cams/caddy@sha256:8b9154c8ba086962fce089d85c0b06db9d5e788715fecc1ea79dbae0a3bdce33
          name: caddy
          ports:
            - containerPort: 8080
              name: http
          resources:
            limits:
              memory: 64Mi
            requests:
              cpu: 10m
              memory: 16Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - net_bind_service
              drop:
                - all
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsUser: 1001
          volumeMounts:
            - mountPath: /config
              name: caddy-data
            - mountPath: /data
              name: caddy-data
            - mountPath: /srv/config
              name: cameras-config
            - mountPath: /etc/caddy
              name: caddy-config
      volumes:
        - emptyDir: {}
          name: caddy-data
        - configMap:
            items:
              - key: cameras.json
                path: cameras.json
            name: cams-cameras
          name: cameras-config
        - configMap:
            items:
              - key: Caddyfile
                path: Caddyfile
            name: cams-cameras
          name: caddy-config
