rendered/envs/alpha/cams/endpoints-cams-cam1.yaml
apiVersion: v1
kind: Endpoints
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: cams-cam1
subsets:
  - addresses:
      - ip: 192.168.0.201
    ports:
      - name: http
        port: 8889
