rendered/envs/alpha/cams/endpoints-cams-cam2.yaml
apiVersion: v1
kind: Endpoints
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: cams-cam2
subsets:
  - addresses:
      - ip: 192.168.0.202
    ports:
      - name: http
        port: 8889
