rendered/envs/alpha/cams/service-cams-cam2.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: cams-cam2
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8889
