rendered/envs/alpha/cams/ingress-cams.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: cams
spec:
  rules:
    - host: cams.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: cams
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: cams.gray.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: cams
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: cams.junior.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: cams
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: cams.ts.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: cams
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: cams.gray.ts.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: cams
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: cams.junior.ts.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: cams
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: cams.lan.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: cams
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: cams.gray.lan.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: cams
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: cams.junior.lan.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: cams
                port:
                  name: http
            path: /
            pathType: Prefix
