rendered/envs/alpha/cams/ingressroute-cams-cam1-lan.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: cams-cam1-lan
spec:
  entryPoints:
    - lan-web
    - lan-websecure
  routes:
    - kind: Rule
      match: Host(`cams-cam1.lan.zebradil.dev`) || Host(`cams-cam1.junior.lan.zebradil.dev`)
      services:
        - name: cams-cam1
          port: http
