rendered/envs/alpha/cams/ingressroute-cams-cam2-lan.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: cams-cam2-lan
spec:
  entryPoints:
    - lan-web
    - lan-websecure
  routes:
    - kind: Rule
      match: Host(`cams-cam2.lan.zebradil.dev`) || Host(`cams-cam2.junior.lan.zebradil.dev`)
      services:
        - name: cams-cam2
          port: http
