rendered/envs/alpha/cams/ingressroute-cams-cam2-vpn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: cams-cam2-vpn
spec:
  entryPoints:
    - vpn-web
    - vpn-websecure
  routes:
    - kind: Rule
      match: Host(`cams-cam2.ts.zebradil.dev`) || Host(`cams-cam2.junior.ts.zebradil.dev`)
      services:
        - name: cams-cam2
          port: http
