rendered/envs/alpha/cams/ingressroute-cams-cams-vpn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: cams-cams-vpn
spec:
  entryPoints:
    - vpn-websecure
    - vpn-web
  routes:
    - kind: Rule
      match: (Host(`cams.ts.zebradil.dev`) || Host(`cams.gray.ts.zebradil.dev`) || Host(`cams.junior.ts.zebradil.dev`)) && PathPrefix(`/cam1`)
      middlewares:
        - name: cams-cam-rewrite
      services:
        - name: cams-cam1
          port: 80
    - kind: Rule
      match: (Host(`cams.ts.zebradil.dev`) || Host(`cams.gray.ts.zebradil.dev`) || Host(`cams.junior.ts.zebradil.dev`)) && PathPrefix(`/cam2`)
      middlewares:
        - name: cams-cam-rewrite
      services:
        - name: cams-cam2
          port: 80
    - kind: Rule
      match: (Host(`cams.ts.zebradil.dev`) || Host(`cams.gray.ts.zebradil.dev`) || Host(`cams.junior.ts.zebradil.dev`)) && PathPrefix(`/cam3`)
      middlewares:
        - name: cams-cam-rewrite
      services:
        - name: cams-cam3
          port: 80
