rendered/envs/alpha/cams/ingressroute-cams-cams-web.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: cams-cams-web
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: (Host(`cams.zebradil.dev`) || Host(`cams.gray.zebradil.dev`) || Host(`cams.junior.zebradil.dev`)) && PathPrefix(`/cam1`)
      middlewares:
        - name: chain-authelia-auth
          namespace: authelia
        - name: cams-cam-rewrite
      services:
        - name: cams-cam1
          port: 80
    - kind: Rule
      match: (Host(`cams.zebradil.dev`) || Host(`cams.gray.zebradil.dev`) || Host(`cams.junior.zebradil.dev`)) && PathPrefix(`/cam2`)
      middlewares:
        - name: chain-authelia-auth
          namespace: authelia
        - name: cams-cam-rewrite
      services:
        - name: cams-cam2
          port: 80
    - kind: Rule
      match: (Host(`cams.zebradil.dev`) || Host(`cams.gray.zebradil.dev`) || Host(`cams.junior.zebradil.dev`)) && PathPrefix(`/cam3`)
      middlewares:
        - name: chain-authelia-auth
          namespace: authelia
        - name: cams-cam-rewrite
      services:
        - name: cams-cam3
          port: 80
