rendered/envs/alpha/cams/ingressroute-cams-lan.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: cams-lan
spec:
  entryPoints:
    - lan-web
    - lan-websecure
  routes:
    - kind: Rule
      match: Host(`cams.lan.zebradil.dev`) || Host(`cams.junior.lan.zebradil.dev`) || Host(`cams.zebradil.dev`) || Host(`cams.junior.zebradil.dev`)
      services:
        - name: cams
          port: http
