rendered/envs/alpha/cams/ingressroute-cams-vpn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: cams-vpn
spec:
  entryPoints:
    - vpn-web
    - vpn-websecure
  routes:
    - kind: Rule
      match: Host(`cams.ts.zebradil.dev`) || Host(`cams.junior.ts.zebradil.dev`)
      services:
        - name: cams
          port: http
